examples/core/errors/07_unclosed_brace.core.tao
// Parse Error: Opening brace without closing
{x: 1
